--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>title</title>
+  <title>One Page</title>
+  <!--Custom css-->
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/layout.css">
-
+  <!--Font links-->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&amp;subset=latin-ext" rel="stylesheet">
+  <!--Font awesome link-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
+    crossorigin="anonymous">
 </head>
 
 <body>
@@ -42,14 +48,115 @@
         </li>
       </ul>
     </nav>
+    <ul class="sth">
+      <li>
+        <a href="#">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fab fa-google-plus-g"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fab fa-pinterest-p"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fab fa-twitter"></i>
+        </a>
+      </li>
+    </ul>
   </div>
 
-  <div class="grid-container full">
+  <div class="grid-container full" style="margin-left:340px">
     <div class="grid-x">
       <div class="cell">
-        <div id="intro">
-          <h6>Something</h6>
-        </div>
+        <section id="intro">
+          <h3>Side menu</h3>
+          <h1>One page.</h1>
+          <div class="grid-x padding-x">
+            <div class="cell large-4">
+              <div class="intro-box">
+                <div class="intro-box-icon">
+                  <i class="far fa-lightbulb"></i>
+                </div>
+                <h5>Goodlayers page builder</h5>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts.
+                </p>
+              </div>
+            </div>
+            <div class="cell large-4">
+              <div class="intro-box">
+                <div class="intro-box-icon">
+                  <i class="fas fa-desktop"></i>
+                </div>
+                <h5>Free sliders included</h5>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts.
+                </p>
+              </div>
+
+            </div>
+            <div class="cell large-4">
+              <div class="intro-box last">
+                <div class="intro-box-icon">
+                  <i class="fab fa-react"></i>
+                </div>
+                <h5>Super powerful admin panel</h5>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts.
+                </p>
+              </div>
+            </div>
+
+            <div class="cell large-4">
+              <div class="intro-box last">
+                <div class="intro-box-icon">
+                  <i class="far fa-compass"></i>
+                </div>
+                <h5>Major browsers supported</h5>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts.
+                </p>
+              </div>
+            </div>
+
+            <div class="cell large-4">
+              <div class="intro-box last">
+                <div class="intro-box-icon">
+                  <i class="fas fa-star"></i>
+                </div>
+                <h5>Customers loves us</h5>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts.
+                </p>
+              </div>
+            </div>
+
+            <div class="cell large-4">
+              <div class="intro-box last">
+                <div class="intro-box-icon">
+                  <i class="far fa-clock"></i>
+                </div>
+                <h5>Superrior supports</h5>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts.
+                </p>
+              </div>
+            </div>
+
+          </div>
+        </section>
       </div>
     </div>
 
@@ -60,9 +167,6 @@
       </div>
     </div>
   </div>
-
-
-
 
 
 
