Add two new sections

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="grid-x">
       <div class="cell">
         <section id="intro">
-          <div class="intro-wrapper">
+          <div class="wrapper">
             <h3>Side menu</h3>
             <h1>One page.</h1>
             <div class="grid-x padding-x">
@@ -166,39 +166,129 @@
         </section>
       </div>
     </div>
-    <div class="grid-x" id="services">
-      <div class="cell medium-4">
+    <section id="services">
+      <div class="wrapper">
+        <div class="grid-x">
+          <div class="cell medium-4">
+          </div>
+          <div class="cell medium-8">
+            <ul class="accordion" data-accordion>
+              <li class="accordion-item is-active" data-accordion-item>
+                <!-- Accordion tab title -->
+                <a href="#" class="accordion-title">Commodo fusce fringilla</a>
+                <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
+                <div class="accordion-content" data-tab-content>
+                  <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which
+                    I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created
+                    for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of
+                    mere tranquil existence, that I neglect my talents.</p>
+                </div>
+              </li>
+              <li class="accordion-item" data-accordion-item>
+                <a href="#" class="accordion-title">Donec ullamcorper non metus</a>
+                <div class="accordion-content" data-tab-content>
+                  <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which
+                    I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created
+                    for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of
+                    mere tranquil existence, that I neglect my talents.</p>
+                </div>
+              </li>
+              <li class="accordion-item" data-accordion-item>
+                <a href="#" class="accordion-title">Nullam quis risus eget urna</a>
+                <div class="accordion-content" data-tab-content>
+                  <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which
+                    I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created
+                    for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of
+                    mere tranquil existence, that I neglect my talents.</p>
+                </div>
+              </li>
+              <li class="accordion-item" data-accordion-item>
+                <a href="#" class="accordion-title">Nullam quis risus eget urna</a>
+                <div class="accordion-content" data-tab-content>
+                  <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which
+                    I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created
+                    for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of
+                    mere tranquil existence, that I neglect my talents.</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="cell medium-8">
-        <ul class="accordion" data-accordion>
-          <li class="accordion-item is-active" data-accordion-item>
-            <!-- Accordion tab title -->
-            <a href="#" class="accordion-title">Commodo fusce fringilla</a>
-            <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
-            <div class="accordion-content" data-tab-content>
-              <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+    </section>
+
+    <section id="statistic">
+      <div class="wrapper">
+        <div class="grid-x">
+          <div class="cell medium-3">
+            <div class="statistic-item">
+              <h4>100%</h4>
+              <span class="divider"></span>
+              <h5>Satisfacion</h5>
             </div>
-            <li class="accordion-item" data-accordion-item>
-              <a href="#" class="accordion-title">Donec ullamcorper non metus</a>
-              <div class="accordion-content" data-tab-content>
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+          </div>
+          <div class="cell medium-3">
+            <div class="cell medium-3">
+              <div class="statistic-item">
+                <h4>588</h4>
+                <span class="divider"></span>
+                <h5>Projects</h5>
               </div>
-            </li>
-            <li class="accordion-item" data-accordion-item>
-              <a href="#" class="accordion-title">Nullam quis risus eget urna</a>
-              <div class="accordion-content" data-tab-content>
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+            </div>
+          </div>
+          <div class="cell medium-3">
+            <div class="cell medium-3">
+              <div class="statistic-item">
+                <h4>16800</h4>
+                <span class="divider"></span>
+                <h5>Working hours</h5>
               </div>
-            </li>
-            <li class="accordion-item" data-accordion-item>
-              <a href="#" class="accordion-title">Nullam quis risus eget urna</a>
-              <div class="accordion-content" data-tab-content>
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+            </div>
+          </div>
+          <div class="cell medium-3">
+            <div class="cell medium-3">
+              <div class="statistic-item">
+                <h4>264</h4>
+                <span class="divider"></span>
+                <h5>Lovely clients</h5>
               </div>
-            </li>
-        </ul>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+
+    <section id="benefit">
+      <div class="grid-x">
+        <div class="cell medium-4">
+          <div class="benefit-item blue">
+            <div class="benefit-item-icon"></div>
+            <h4>Save a lot of your time</h4>
+            <h6>Tellus Pellente Amet</h6>
+            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
+              with my whole heart. I am alone, and feel the charm of existence.</p>
+          </div>
+        </div>
+        <div class="cell medium-4">
+          <div class="benefit-item red">
+            <div class="benefit-item-icon"></div>
+            <h4>Great customer support</h4>
+            <h6>Tellus Pellente Amet</h6>
+            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
+              with my whole heart. I am alone, and feel the charm of existence.</p>
+          </div>
+        </div>
+        <div class="cell medium-4">
+          <div class="benefit-item purple">
+            <div class="benefit-item-icon"></div>
+            <h4>Retina ready</h4>
+            <h6>Tellus Pellente Amet</h6>
+            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
+              with my whole heart. I am alone, and feel the charm of existence.</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 
 
