--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>One Page</title>
   <!--Custom css-->
-  <link rel="stylesheet" href="css/foundation.min.css">
+  <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/layout.css">
   <!--Font links-->
@@ -324,12 +324,295 @@
       </div>
     </section>
 
+    <section id="works">
+      <div class="wrapper">
+        <div class="grid-x">
+          <div class="cell">
+            <div class="work-title">
+              <h5 class="section-secondary-title">Explore some of our works</h5>
+              <h3 class="section-main-title">Recent works</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="framework">
+      <div class="wrapper">
+        <div class="grid-x">
+          <div class="cell medium-6">
+            <div class="framework-content">
+              <div class="framework-content-title">
+                <h5 class="section-secondary-title">Are you ready to be amazed?</h5>
+                <h3 class="section-main-title">Our new framework</h3>
+              </div>
+              <p>We had spent a lot of time to study, gather information and finally we come up with the best page builder in
+                the world. It’s the most powerful with many options and it has everything you need. You can push them into
+                3 modes, block mode, preview mode and live mode(frontend builder). Now with this tool, your imagination will
+                be limitless.</p>
+            </div>
+          </div>
+          <div class="cell medium-6">
+            <div class="framework-graph">
+              <div class="progress-container">
+                <div class="progress-label">
+                  <span class="progress-skill">Photography</span>
+                  <span class="progress-percent">80%</span>
+                </div>
+                <div class="progress" role="progressbar" tabindex="0" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-meter" style="width:80%"></div>
+                </div>
+              </div>
+              <div class="progress-container">
+                <div class="progress-label">
+                  <span class="progress-skill">Html/CSS</span>
+                  <span class="progress-percent">90%</span>
+                </div>
+                <div class="progress" role="progressbar" tabindex="0" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-meter" style="width:90%"></div>
+                </div>
+              </div>
+              <div class="progress-container">
+                <div class="progress-label">
+                  <span class="progress-skill">Wordpress core</span>
+                  <span class="progress-percent">85%</span>
+                </div>
+                <div class="progress" role="progressbar" tabindex="0" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-meter" style="width:85%"></div>
+                </div>
+              </div>
+              <div class="progress-container">
+                <div class="progress-label">
+                  <span class="progress-skill">CUSTOMER SATISFICATION</span>
+                  <span class="progress-percent">95%</span>
+                </div>
+                <div class="progress" role="progressbar" tabindex="0" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-meter" style="width:95%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="news">
+      <div class="wrapper">
+        <div class="grid-x">
+          <div class="cell">
+            <div class="news-title">
+              <h3 class="section-main-title">Recent news</h3>
+              <h5 class="section-secondary-title">Get updated from us</h5>
+            </div>
+          </div>
+        </div>
+        <div class="grid-x">
+          <div class="cell">
+            <div class="news-box">
+              <div class="news-box-img">
+                <img src="img/news-1.jpg" />
+              </div>
+              <div class="news-box-content">
+                <div class="news-box-content-date">
+                  May 18, 2016
+                </div>
+                <a href="#">
+                  <h6>Wonderful serenity has taken</h6>
+                </a>
+                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I
+                  enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created...</p>
+              </div>
+              <ul class="news-box-nav">
+                <li>
+                  <span>
+                    <i class="fas fa-book"></i>
+                  </span>
+                  <a href="#">John Doe</a>
+                </li>
+                <li>
+                  <span>
+                    <i class="far fa-folder"></i>
+                  </span>
+                  <a href="#">News</a>
+                </li>
+                <li>
+                  <span>
+                    <i class="far fa-comment"></i>
+                  </span>
+                  <a href="#">0</a>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="team">
+      <div class="wrapper">
+        <div class="grid-x">
+          <div class="cell">
+            <h4 class="section-secondary-title">Who are we?</h4>
+            <h3 class="section-main-title">Meet the genius team</h3>
+          </div>
+        </div>
+        <div class="grid-x">
+          <div class="cell medium-3">
+            <div class="team-box">
+              <div class="team-box-img">
+                <img src="img/employee-1.jpg" alt="David Parker">
+              </div>
+              <div class="team-box-content">
+                <h5>David Parker</h5>
+                <h6>Chief Executive Officer</h6>
+                <span class="divider"></span>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts. Separated they live in Bookmarks.</p>
+                <ul class="team-box-social">
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-linkedin-in"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="cell medium-3">
+            <div class="team-box">
+              <div class="team-box-img">
+                <img src="img/employee-2.jpg" alt="David Beckham">
+              </div>
+              <div class="team-box-content">
+                <h5>David Parker</h5>
+                <h6>Chief Executive Officer</h6>
+                <span class="divider"></span>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts. Separated they live in Bookmarks.</p>
+                <ul class="team-box-social">
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-linkedin-in"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="cell medium-3">
+            <div class="team-box">
+              <div class="team-box-img">
+                <img src="img/employee-3.jpg" alt="David Smith">
+              </div>
+              <div class="team-box-content">
+                <h5>David Parker</h5>
+                <h6>Chief Executive Officer</h6>
+                <span class="divider"></span>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts. Separated they live in Bookmarks.</p>
+                <ul class="team-box-social">
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-linkedin-in"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="cell medium-3">
+            <div class="team-box">
+              <div class="team-box-img">
+                <img src="img/employee-4.jpg" alt="David Doe">
+              </div>
+              <div class="team-box-content">
+                <h5>David Parker</h5>
+                <h6>Chief Executive Officer</h6>
+                <span class="divider"></span>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
+                  texts. Separated they live in Bookmarks.</p>
+                <ul class="team-box-social">
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-linkedin-in"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <section id="support">
       <div class="wrapper">
         <div class="grid-x">
           <div class="cell">
             <div class="support-content">
-              <h3>Dedicated Support Team</h3>
+              <h3 class="section-main-title">Dedicated Support Team</h3>
               <h5>Not only theme but we also provide best support</h5>
               <button class="hollow button" href="#">Learn more</button>
             </div>
@@ -339,7 +622,58 @@
     </section>
 
     <section id="contact">
-      <h3>Contact Us</h3>
+      <div class="wrapper">
+        <div class="grid-x">
+          <div class="cell">
+            <h3 class="section-main-title">Contact Us</h3>
+            <ul class="contact-social">
+              <li>
+                <a href="#">
+                  <i class="fas fa-envelope"></i>
+                  <span>Email</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                  <span>Facebook</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-google-plus-g"></i>
+                  <span>Google Plus</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                  <span>Twitter</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="grid-x" id="form">
+          <div class="cell small-12 medium-6">
+            <input type="text" placeholder="Full Name*" />
+          </div>
+          <div class="cell medium-6 small-12">
+            <input type="email" placeholder="Email*" />
+          </div>
+          <div class="cell">
+            <input type="text" placeholder="Subject*" />
+          </div>
+          <div class="cell">
+            <textarea placeholder="Message*"></textarea>
+          </div>
+          <div class="cell">
+            <button class="button">Submit</button>
+          </div>
+        </div>
+      </div>
     </section>
   </div>
 
