Upload to github.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+  <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -117,7 +118,7 @@
             <h1>One page.</h1>
             <div class="grid-x padding-x">
               <div class="cell medium-4">
-                <div class="intro-box">
+                <div class="intro-box wow fadeInDown" data-wow-duration="1s">
                   <div class="intro-box-icon">
                     <i class="far fa-lightbulb"></i>
                   </div>
@@ -128,7 +129,7 @@
                 </div>
               </div>
               <div class="cell medium-4 ">
-                <div class="intro-box">
+                <div class="intro-box wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.1s">
                   <div class="intro-box-icon">
                     <i class="fas fa-desktop"></i>
                   </div>
@@ -140,7 +141,7 @@
 
               </div>
               <div class="cell medium-4">
-                <div class="intro-box last">
+                <div class="intro-box last wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s">
                   <div class="intro-box-icon">
                     <i class="fab fa-react"></i>
                   </div>
@@ -152,7 +153,7 @@
               </div>
 
               <div class="cell medium-4">
-                <div class="intro-box last">
+                <div class="intro-box wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.3s">
                   <div class="intro-box-icon">
                     <i class="far fa-compass"></i>
                   </div>
@@ -164,7 +165,7 @@
               </div>
 
               <div class="cell medium-4">
-                <div class="intro-box last">
+                <div class="intro-box wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.4s">
                   <div class="intro-box-icon">
                     <i class="fas fa-star"></i>
                   </div>
@@ -176,7 +177,7 @@
               </div>
 
               <div class="cell medium-4">
-                <div class="intro-box last">
+                <div class="intro-box last wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
                   <div class="intro-box-icon">
                     <i class="far fa-clock"></i>
                   </div>
@@ -195,7 +196,7 @@
     <section id="services">
       <div class="wrapper">
         <div class="grid-x">
-          <div class="cell medium-4 small-12">
+          <div class="cell medium-4 small-12 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.4s">
             <div class="flip-card-container">
               <div class="flip-card">
                 <div class="flip-card-front">
@@ -225,7 +226,7 @@
               </div>
             </div>
           </div>
-          <div class="cell medium-8 small-12">
+          <div class="cell medium-8 small-12 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.4">
             <ul class="accordion" data-accordion>
               <li class="accordion-item is-active" data-accordion-item>
                 <!-- Accordion tab title -->
@@ -273,7 +274,7 @@
 
     <section id="statistic">
       <div class="wrapper">
-        <div class="grid-x">
+        <div class="grid-x wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4">
           <div class="cell medium-3">
             <div class="statistic-item">
               <h4>100%</h4>
@@ -314,7 +315,7 @@
 
     <section id="benefit">
       <div class="grid-x" data-equalizer>
-        <div class="cell medium-4">
+        <div class="cell medium-4 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4">
           <div class="benefit-item blue" data-equalizer-watch>
             <div class="benefit-item-icon">
               <i class="fas fa-clock"></i>
@@ -325,7 +326,7 @@
               with my whole heart. I am alone, and feel the charm of existence.</p>
           </div>
         </div>
-        <div class="cell medium-4">
+        <div class="cell medium-4 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4">
           <div class="benefit-item red" data-equalizer-watch>
             <div class="benefit-item-icon">
               <i class="far fa-comment"></i>
@@ -336,7 +337,7 @@
               with my whole heart. I am alone, and feel the charm of existence.</p>
           </div>
         </div>
-        <div class="cell medium-4">
+        <div class="cell medium-4 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4">
           <div class="benefit-item purple" data-equalizer-watch>
             <div class="benefit-item-icon">
               <i class="fas fa-camera-retro"></i>
@@ -476,7 +477,7 @@
     <section id="framework">
       <div class="wrapper">
         <div class="grid-x">
-          <div class="cell medium-6">
+          <div class="cell medium-6 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.6s">
             <div class="framework-content">
               <div class="framework-content-title">
                 <h5 class="section-secondary-title">Are you ready to be amazed?</h5>
@@ -488,7 +489,7 @@
                 be limitless.</p>
             </div>
           </div>
-          <div class="cell medium-6">
+          <div class="cell medium-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.6s">
             <div class="framework-graph">
               <div class="progress-container">
                 <div class="progress-label">
@@ -731,7 +732,7 @@
       </div>
     </section>
 
-    <section id="team">
+    <section id="team" class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.6s">
       <div class="wrapper">
         <div class="grid-x">
           <div class="cell">
@@ -896,7 +897,7 @@
 
     <section id="support">
       <div class="wrapper">
-        <div class="grid-x">
+        <div class="grid-x wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.6s">
           <div class="cell">
             <div class="support-content">
               <h3 class="section-main-title">Dedicated Support Team</h3>
@@ -996,6 +997,10 @@
   <script src="js/app.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
   <script type="text/javascript" src="js/slider.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
